--- a/templates/tenman/matches.html
+++ b/templates/tenman/matches.html
@@ -8,7 +8,7 @@
   
 
   <div class="container" style="padding-top:5px; padding-bottom:5px;">
-    <h4> Most played maps (under construction) </h4>
+    <h4> Most Played Maps (under construction) </h4>
   </div>
   <div class="container">
     <!-- Row 1-->
@@ -18,83 +18,34 @@
         <div class="card border-success text-dark bg-light">
           <div class="card-body">
             <h5 class="card-title">#1  {{top_maps[0][0]}}</h5>
-            <img src="https://i.imgur.com/Vi8dXOq.jpg" class="card-img-bottom" alt="...">
+            <img src="{{maps_img[top_maps[0][0]]}}" class="card-img-bottom" alt="...">
           </div>
           <div class="card-footer">
-            Played {{ top_maps[0][1] }} times
+            Played {{ top_maps[0][1] }} times // Total of {{map_rounds[top_maps[0][0]]}} rounds
           </div>
         </div>
        </div>
 
        <!-- RH Column-->       
       <div class="col-md-6">
-        <!-- RH Column rows -->
-          <!-- RH Column Row 1-->
-          <div class="row">
-          <div class="card border-info flex-row flex-wrap">
-            <div class="card-title border-0">
-                <img src="https://i.imgur.com/S9GlJb4.png" style="height:60px; width:140px;"alt="">
+        <div class="card border-danger mb-3" style="margin-top:10px;">
+          <div class="card-body">
+              <!--<h5 class="card-title">Latest matches</h5>-->
+            {% for i in range(top_maps.__len__()-1) %}
+            <div class="row">
+              <div class="col-sm-5">
+                <h6 class="mb-0"><img src="{{maps_img[top_maps[i+1][0]]}}" height = "20" width="40" style="margin-right: 5px;">#{{ i+2 }} {{ top_maps[i+1][0] }}</h6>
+              </div>
+              <div class="col-sm-7 text-secondary">
+                {{ top_maps[i+1][1] }} matches // {{map_rounds[top_maps[i+1][0]]}} rounds
+              </div>
             </div>
-            <div class="card-block px-2">
-                <h5 class="card-title">#2 {{ top_maps[1][0] }}</h5>
-            </div>
-           
-            <div class="card-footer w-100 text-muted">
-              Played {{ top_maps[1][1] }} times 
-            </div>
-        </div>
-        </div>
-        <div class="row">
-          <div class="card border-info flex-row flex-wrap">
-            <div class="card-title border-0">
-                <img src="https://i.imgur.com/S9GlJb4.png" style="height:60px; width:140px;"alt="">
-            </div>
-            <div class="card-block px-2">
-                <h5 class="card-title">#2 {{ top_maps[2][0] }}</h5>
-            </div>
-           
-            <div class="card-footer w-100 text-muted">
-              Played {{ top_maps[2][1] }} times
-            </div>
-        </div>
-        </div>
-        <div class="row">
-          <div class="card border-info flex-row flex-wrap">
-            <div class="card-title border-0">
-                <img src="https://i.imgur.com/S9GlJb4.png" style="height:60px; width:140px;"alt="">
-            </div>
-            <div class="card-block px-2">
-                <h5 class="card-title">#2 {{top_maps[3][0]}}</h5>
-            </div>
-           
-            <div class="card-footer w-100 text-muted">
-              Played {{top_maps[3][1]}} times // Total of 456 rounds
-            </div>
-        </div>
-        </div>
-        
-          <!-- RH Column Row 1 ends-->
-          <!-- RH Column Row 2 -->
-          <!--<div class="row">
-            <div class="card">
-              <div class="row">
-              <div class = "col-md-12">
-                <div class="col-sm-6">
-                  <img class="card-img" src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Card image"/>
-                </div>
-                <div class="col-sm-6">
-                  <div class="card-body-right">
-                    <h4 class="card-title">John Doe</h4>
-                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-                    <a href="#" class="btn btn-primary">See Profile</a>
-                  </div>
-                   </div>
-                </div>
-                </div> 
-                </div>
-          </div>-->
-          <!-- RH Column Row 2ends-->
-        <div>
+            {% if i != top_maps.__len__()-2 %}
+            <hr>
+            {% endif %}
+            {% endfor %}
+            
+          </div>
       </div>
       <!-- RH Column ends-->
         
