--- a/templates/tenman/matches.html
+++ b/templates/tenman/matches.html
@@ -8,7 +8,7 @@
   
 
   <div class="container" style="padding-top:5px; padding-bottom:5px;">
-    <h4> Most Played Maps (under construction) </h4>
+    <h4> Most Played Maps</h4>
   </div>
   <div class="container">
     <!-- Row 1-->
