--- a/templates/tenman/seasons.html
+++ b/templates/tenman/seasons.html
@@ -16,8 +16,9 @@
                     Select season<span class="caret"></span>
                 </button>
                 <ul id="demolist" class="dropdown-menu">
-                    <li><a href="#">December 2020</a></li>
                     <li><a href="#">January 2021</a></li>
+                    <li><a href="#">December 2020</a></li>
+                    <li><a href="#">November 2020</a></li>
                     
                 </ul>
             </div>
@@ -27,8 +28,44 @@
     <div class="container">
         <div class="row">
             <div class="table-responsive">
-                <table class="table table-hover" id=datalist>                              
+                <table class="table table-hover" id=datalist>
+                    <!-- Initialize with values from current season-->                              
+                    <thead>
+                        <tr> 
+                            <th scope="col">Position</th> 
+                            <th scope="col">Player</th> 
+                            <th scope="col" class="text-center">Matches</th>
+                            <th scope="col" class="text-center">Won</th> 
+                            <th scope="col" class="text-center">Win %</th> 
+                            <th scope="col" class="text-center">Current win streak</th> 
+                            <th scope="col" class="text-center">Points<span id="clickableIcon"><i class="fa fa-info-circle fa-sm" style="padding-left:3px;" data-toggle="modal" data-target="#pointsInfoModal"></i></span></th> 
+                          </tr> 
+                    </thead>
+                    <tbody>
+                        {% for i in range(season_data.__len__()) %}
+                        <tr>
+                        <td>{{i+1}}</td>
+                        <td><a href="/tenman/user/{{ season_data[i][0] }}"><img src="{{season_data[i][2]}}" height="20" width="20" style="margin-right: 3px;;">{{season_data[i][1]}}</a></td>
+                        
+                        <td class="tablecenter">{{ season_data[i][6] + season_data[i][7] }}</td>
+                        <td class="text-center">{{ season_data[i][6] }}</td>
+                        <td class="text-center">{{ ((season_data[i][6]|float / (season_data[i][6] + season_data[i][7])*100))|round|int  }}</td>
+                        
+                        {% if season_data[i][8] == 0 %}
+                        <td class="text-center"> - </td>
+                        
+                        {% else %}
+                        <td class="tablecenter"><span style="color:green;">+{{ season_data[i][8] }}</span>
+                        {% if season_data[i][8] > 2 %}
+                        <span style="color:orange"><i class="fa fa-fire" style="padding-left:3px;"></i></span>
+                        {% endif %}
+                        </td>
 
+                        {% endif %}
+                        <td class="text-center">{{season_data[i][3]}}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
                 </table>
             </div>
         </div>    
@@ -84,6 +121,9 @@
     .tablecenter {
         text-align:center;
     }
+
+
+    
 </style>
 
 <!-- Script for extracting data from the season database -->
@@ -113,10 +153,11 @@ $('#demolist li').on('click', function(){
                         <th scope="col" class="text-center">Points<span id="clickableIcon"><i class="fa fa-info-circle fa-sm" style="padding-left:3px;" data-toggle="modal" data-target="#pointsInfoModal"></i></span></th> \
                       </tr> \
                     </thead>';
+            data += '<tbody>';
             $.each(res,function(index,value){
                 data += '<tr>';
                 data += '<td>' + (index+1).toString() + '</td>';
-                data += '<td><a href="/tenman/user/'+value[0]+'"</a>'+'<img src="'+value[2] + '" height="20" width="20" style="margin-right: 3px;;">' + value[1]+"</td>";
+                data += '<td><a href="/tenman/user/'+value[0]+'"</a>'+'<img src="'+value[2] + '" height="20" width="20" style="margin-right: 3px;">' + value[1]+"</td>";
                 data += '<td class="tablecenter">' + (value[6] + value[7]) + '</td>';
                 data += '<td class="tablecenter">' + value[6] + '</td>';
                 data += '<td class="tablecenter">' + Math.round((value[6] / (value[6] + value[7]))*100) + '%</td>'
