--- a/templates/tenman/seasons.html
+++ b/templates/tenman/seasons.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="row">
             <div class="table-responsive">
-                <table class="table table-hover" id=datalist>
+                <table class="table table-striped table-hover" id=datalist>
                     <!-- Initialize with values from current season-->                              
                     <thead>
                         <tr> 
