Remove new tag from seasons

--- a/templates/tenman/navbar.html
+++ b/templates/tenman/navbar.html
@@ -65,7 +65,7 @@
           <a class="nav-link" href="/tenman/matches">Recorded Matches <span class="sr-only"></span></a>
         </li>
         <li class="nav-item {{navbar_status[3]}} ">
-          <a class="nav-link" href="/tenman/seasons" tabindex="-1" aria-disabled="true">Seasons<span class="badge badge-secondary" style="margin-left: 5px;">New</span></a>
+          <a class="nav-link" href="/tenman/seasons" tabindex="-1" aria-disabled="true">Seasons</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">API</a>
