--- a/templates/tenman/tenman_landing.html
+++ b/templates/tenman/tenman_landing.html
@@ -11,6 +11,10 @@
 <!-- Alert for adding match-->
 <div class="container">
   <h3 style="padding-top: 5px;">Tenman 4 ever boys!</h3>
+  
+    <h5 id="temp">Current active season: <a href="/tenman/seasons">January 2021 </a>// Ends in <span id="timeLeft"></span></h5>
+
+
   <h6>Recorded a total of {{num_matches}} matches and {{num_players}} players.<span id="clickableIcon"><i class="fa fa-info-circle fa-sm" style="padding-left:3px;" data-toggle="modal" data-target="#myModal"></i></span></h6>
   <h6>Latest recorded match: <a href="/tenman/match/{{latest_match.get_match_id()}}">{{ latest_match.get_match_id() }}, {{latest_match.get_date()}} @ {{latest_match.get_map()}}</a>
   </h6>
@@ -169,6 +173,41 @@
 
     }
 </style>
+
+
+<script>
+    
+  // Set the date we're counting down to
+  var countDownDate = new Date("Feb 1, 2021 01:30:00").getTime();
+  
+  // Update the count down every 1 second
+  var countdownfunction = setInterval(function() {
+  
+    // Get todays date and time
+    var now = new Date().getTime();
+    
+    // Find the distance between now an the count down date
+    var distance = countDownDate - now;
+    
+    // Time calculations for days, hours, minutes and seconds
+    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+    
+    // Output the result in an element with id="demo"
+    document.getElementById("timeLeft").innerHTML = days + "d " + hours + "h "
+    + minutes + "m " + seconds + "s ";
+    
+    // If the count down is over, write some text 
+    if (distance < 0) {
+      clearInterval(countdownfunction);
+      document.getElementById("timeLeft").innerHTML = "EXPIRED";
+    }
+  }, 1000);
+  </script>
+  
+
 <script>
   $(document).ready(function(){
       $('[data-toggle="tooltip"]').tooltip();   
