--- a/templates/tenman/seasons.html
+++ b/templates/tenman/seasons.html
@@ -8,9 +8,15 @@
         <h4 style="padding-top: 3px;"> Tenman Seasons</h4>
     </div>
 
+    <!--Temporary-->
+    <div class="container">
+        <h5 id="temp">Current active season: January 2021 // Ends in <span id="timeLeft"></span></h5> 
+    </div>
+
+    <!-- Temporary-->
     <div class="container">
         <div class="input-group">                                            
-            <input type="TextBox" ID="datebox" Class="form-control" placeholder="January 2021"></input>
+            <input type="TextBox" ID="datebox" Class="form-control" placeholder="Showing data for: January 2021"></input>
             <div class="input-group-btn">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                     Select season<span class="caret"></span>
@@ -18,8 +24,7 @@
                 <ul id="demolist" class="dropdown-menu">
                     <li><a href="#">January 2021</a></li>
                     <li><a href="#">December 2020</a></li>
-                    <li><a href="#">November 2020</a></li>
-                    
+                    <li><a href="#">November 2020</a></li>                    
                 </ul>
             </div>
         </div>
@@ -106,6 +111,10 @@
             <li style="list-style:None">
                 Bonus points: <span style="color:green">+5</span>
             </li>
+            <p>
+                Matches started before midnight at the day of month change will count towards the seasons scoreboard. 
+                A season ends 90 minutes after midnight in order to let any match started before midnight to be finished, and player scores be added to the final scoreboard.
+            </p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -121,6 +130,10 @@
     .tablecenter {
         text-align:center;
     }
+    ::placeholder { 
+  color: black !important; 
+  opacity: 1 !important; /* Firefox */
+}
 
 
     
@@ -129,11 +142,14 @@
 <!-- Script for extracting data from the season database -->
 <script>
 $('#demolist li').on('click', function(){
-   $('#datebox').val($(this).text());
+   $('#datebox').val($(this).text());  
+   
    month = $("#datebox").val();
+   s = "Showing data for: " + month
+   $('#datebox').val(s);
+   console.log("moth:",month)    
+   
    table_name = "players_" + month.slice(0,3);
-   console.log(table_name);
-
     // Get table data
     $.ajax({
         method:"post",
@@ -182,5 +198,39 @@ $('#demolist li').on('click', function(){
 });
 
 </script>
+
+<script>
+    
+// Set the date we're counting down to
+var countDownDate = new Date("Feb 1, 2021 01:30:00").getTime();
+
+// Update the count down every 1 second
+var countdownfunction = setInterval(function() {
+
+  // Get todays date and time
+  var now = new Date().getTime();
+  
+  // Find the distance between now an the count down date
+  var distance = countDownDate - now;
+  
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+  
+  // Output the result in an element with id="demo"
+  document.getElementById("timeLeft").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+  
+  // If the count down is over, write some text 
+  if (distance < 0) {
+    clearInterval(countdownfunction);
+    document.getElementById("timeLeft").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
+
+<!-- Script for counting down to season deadline -->
 {% endblock %}
 </html>
